# KakuroGenerator

./: .gitignore  Caddyfile  KakuroGenerator.spec  README.md  RUNNING.md  admin_cli.py  analyze_json.py  auth.py  build.sh  cleanup_db.py  database.py  debug_response.json  generate_book.py  generate_logs.py  inspect_logs.py  inspect_puzzles.py  kakuro.py  main.py  models.py  oauth.py  package_app.py  pyproject.toml  repro_500.py  requirements.txt  setup.py  simulate_gen.py  solver.py  storage.py  test_auth.py  test_generation.py  test_kakuro.py  test_kakuro_file.py  test_topology_simple.py  test_uniqueness_repro.py  test_very_easy.py  verify_db.py  verify_fix.py
alembic/: env.py
alembic/versions/: bc9e689a6020_allow_anonymous_interactions.py  c69187634699_allow_null_user_on_puzzle.py
android/: CSPSolver.java  KakuroBoard.java
cpp/: .gitignore  CMakeLists.txt  Makefile  Quickstart.md  Readme.md  kakuro_bindings.cpp  kakuro_board.cpp  kakuro_cpp.h  kakuro_difficulty.cpp  kakuro_hybrid_uniqueness.cpp  kakuro_jni.cpp  kakuro_solver.cpp  test_kakuro.cpp
python/: __init__.py  analytics.py  auth.py  check_config.py  config.py  database.py  difficulty_estimator.py  email_service.py  generate_book.py  generator_service.py  kakuro.py  kakuro_log_viewer.py  kakuro_web_viewer.py  kakuro_wrapper.py  models.py  oauth.py  performance.py  solver.py  storage.py
python/routes/: admin_routes.py  auth_routes.py
python/templates/: kakuro_viewer.html
routes/: admin_routes.py  auth_routes.py
saved_puzzles/: 5522350c-e773-48c2-a0b1-f342f85c2a0c.json  98ee10b5-2ce3-4c29-92fd-b0fba596ae1b.json
static/: admin.html  admin.js  index.html  script.js  style.css  test.html
tests/: test_api.py  test_cpp_integration.py  test_generation.py  test_kakuro.py  test_kakuro_file.py  test_mail.py  test_topology_simple.py  test_uniqueness_repro.py  test_variable_size_logic.py  test_very_easy.py
wheelhouse/: kakuro-0.4.6-cp312-cp312-win32.whl  kakuro-0.4.6-cp312-cp312-win_amd64.whl  kakuro-0.4.6-cp313-cp313-win32.whl  kakuro-0.4.6-cp313-cp313-win_amd64.whl  kakuro-0.4.6-cp314-cp314-win32.whl  kakuro-0.4.6-cp314-cp314-win_amd64.whl  kakuro-0.4.6-cp314-cp314t-win32.whl  kakuro-0.4.6-cp314-cp314t-win_amd64.whl  kakuro-0.5.0-cp312-cp312-win32.whl  kakuro-0.5.0-cp312-cp312-win_amd64.whl  kakuro-0.5.0-cp313-cp313-win32.whl  kakuro-0.5.0-cp313-cp313-win_amd64.whl  kakuro-0.5.0-cp314-cp314-win32.whl  kakuro-0.5.0-cp314-cp314-win_amd64.whl  kakuro-0.5.0-cp314-cp314t-win32.whl  kakuro-0.5.0-cp314-cp314t-win_amd64.whl  kakuro-0.5.1-cp312-cp312-win32.whl  kakuro-0.5.1-cp312-cp312-win_amd64.whl  kakuro-0.5.1-cp313-cp313-win32.whl  kakuro-0.5.1-cp313-cp313-win_amd64.whl  kakuro-0.5.1-cp314-cp314-win32.whl  kakuro-0.5.1-cp314-cp314-win_amd64.whl  kakuro-0.5.1-cp314-cp314t-win32.whl  kakuro-0.5.1-cp314-cp314t-win_amd64.whl
