[project]
name = "kakuro"
version = "0.4.6"
description = "High-performance Kakuro puzzle generator with C++ acceleration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.126.0",
    "numpy>=2.4.0",
    "pydantic[email]>=2.12.5",
    "pyinstaller>=6.17.0",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.1",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
    "starlette[full]>=0.50.0",
    "PyJWT>=2.8.0",
    "email-validator>=2.1.0",
    "requests>=2.32.5",
    "pybind11[global]>=3.0.1",
    "pytest>=9.0.2",
    "resend>=2.19.0",
    "python-dotenv>=1.2.1",
    "psutil>=7.2.1",
    "reportlab>=4.4.7",
    "cibuildwheel>=3.3.0",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "pybind11[global]>=2.11.0",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kakuro"]

[tool.setuptools.package-dir]
# This maps the package "kakuro" to the directory "python"
kakuro = "python"

[tool.setuptools.package-data]
"*" = ["*.so", "*.pyd", "*.dll"]
